--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -40,3 +40,15 @@
   pages = {286--291},
   file = {ACS Full Text Snapshot:/home/cmp/.mozilla/firefox/p1xsqj11.default/zotero/storage/WRPW3NK2/acs.estlett.html:text/html},
 }
+
+
+@techreport{noauthor_nyc_2013,
+  title = {{{NYC} by the {Numbers}: {Annual} {Report} 2013}},
+  url = {https://assets.documentcloud.org/documents/1173791/moda-annual-report-2013.pdf},
+  urldate = {2017-03-25},
+  institution = {NYC Mayor's Office of Data Analytics},
+  month = {dec},
+  year = {2013},
+  pages = {26},
+  file = {NYC by the Numbers\: Annual Report 2013:/home/cmp/.mozilla/firefox/p1xsqj11.default/zotero/storage/A49ZBBAB/moda-annual-report-2013.pdf:application/pdf},
+}
