added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -52,3 +52,16 @@
   pages = {26},
   file = {NYC by the Numbers\: Annual Report 2013:/home/cmp/.mozilla/firefox/p1xsqj11.default/zotero/storage/A49ZBBAB/moda-annual-report-2013.pdf:application/pdf},
 }
+
+
+@techreport{nyc_moda_nyc_2013,
+  title = {{{NYC} by the {Numbers}: {Annual} {Report} 2013}},
+  url = {https://assets.documentcloud.org/documents/1173791/moda-annual-report-2013.pdf},
+  urldate = {2017-03-25},
+  institution = {NYC Mayor's Office of Data Analytics},
+  author = {NYC MODA},
+  month = {dec},
+  year = {2013},
+  pages = {26},
+  file = {NYC by the Numbers\: Annual Report 2013:/home/cmp/.mozilla/firefox/p1xsqj11.default/zotero/storage/A49ZBBAB/moda-annual-report-2013.pdf:application/pdf},
+}
