--- a/13f3a.tex
+++ b/13f3a.tex
@@ -1,1 +1,1 @@
-$$\roman{RMSE}=\sqrt{\sum\limits_{i}\frac{(\hat{y_i}-y_i)^2}{N}}$$
+$$\rom{RMSE}=\sqrt{\sum\limits_{i}\frac{(\hat{y_i}-y_i)^2}{N}}$$
