--- a/13f3a.tex
+++ b/13f3a.tex
@@ -1,2 +1,2 @@
 $$\rm{RMSE}=\sqrt{\sum\limits_{i}\frac{(\hat{y_i}-y_i)^2}{N}}$$
-with \hat{y_i} and y_i being the 
+with \hat{y_i} and y_i being the predicted and a
