added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -37,3 +37,9 @@
   year = {2013},
   file = {NYC by the Numbers\: Annual Report 2013:/home/cmp/.mozilla/firefox/p1xsqj11.default/zotero/storage/A49ZBBAB/moda-annual-report-2013.pdf:application/pdf},
 }
+
+
+@misc{github,
+  title = {{Project code repository}},
+  url = {https://github.com/cmprince/USI_social_impact},
+}
