added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -62,3 +62,18 @@
   author = {Mart\'{\i}n~Abadi and Ashish~Agarwal and Paul~Barham and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean and Matthieu~Devin and Sanjay~Ghemawat and Ian~Goodfellow and Andrew~Harp and Geoffrey~Irving and Michael~Isard and Yangqing Jia and Rafal~Jozefowicz and Lukasz~Kaiser and Manjunath~Kudlur and Josh~Levenberg and Dan~Man\'{e} and Rajat~Monga and Sherry~Moore and Derek~Murray and Chris~Olah and Mike~Schuster and Jonathon~Shlens and Benoit~Steiner and Ilya~Sutskever and Kunal~Talwar and Paul~Tucker and Vincent~Vanhoucke and Vijay~Vasudevan and Fernanda~Vi\'{e}gas and Oriol~Vinyals and Pete~Warden and Martin~Wattenberg and Martin~Wicke and Yuan~Yu and Xiaoqiang~Zheng},
   year = {2015},
 }
+
+
+@article{Hyndman_2006,
+  doi = {10.1016/j.ijforecast.2006.03.001},
+  url = {https://doi.org/10.1016%2Fj.ijforecast.2006.03.001},
+  year = {2006},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {22},
+  number = {4},
+  pages = {679--688},
+  author = {Rob J. Hyndman and Anne B. Koehler},
+  title = {{Another look at measures of forecast accuracy}},
+  journal = {International Journal of Forecasting},
+}
