--- a/13f3a.tex
+++ b/13f3a.tex
@@ -1,2 +1,2 @@
 $$\textnormal{RMSE}=\sqrt{\sum\limits_{i}\frac{(\hat{y_i}-y_i)^2}{N}}$$
-w $\hat{y_i}$ and $y_i$ being the predicted and actual values for the $i$th data point, respectively, and $N$ being the number of observations.
+with $\hat{y_i}$ and $y_i$ being the predicted and actual values for the $i$th data point, respectively, and $N$ being the number of observations.
